--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Rock paper Scissors</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="images/1sst.jpeg">
+            <img src="images/1sst.jpg">
         </div>
         <div class="choice" id="paper">
-            <img src="images/2nd.jpeg">
+            <img src="images/2nd.jpg">
         </div>
         <div class="choice" id="scissors">
-            <img src="images/3rd.jpeg">
+            <img src="images/3rd.jpg">
         </div>
     </div>
 
@@ -36,4 +36,5 @@
 </div>
 <script src="app.js"></script>
 </body>
+
 </html>
